<resources>
    <string name="app_name">Noise Reduction</string>
    <string name="init_status">Status:</string>
    <string name="action_settings">Settings</string>
    <string name="StartEcho">Spectrum Subtraction + Residual Reduction</string>
    <string name="crowd_echo">Spectrum Subtraction + Wiener Filter</string>
    <string name="helicopter_echo">DEFAULT PLAYTHROUGH</string>
    <string name="engine_echo">SNR-based Spectrum Subtraction</string>
    <string name="StopEcho">Stop</string>
    <string name="GetParam">View Audio Param</string>
    <string name="status_echoing">Engine Echoing...</string>
    <string name="status_record_perm">"Requesting RECORD_AUDIO Permission..."</string>

    <string name="error_player">Failed to Create Audio Player</string>
    <string name="error_recorder">Failed to Create Audio Recorder</string>
    <string name="error_no_mic">"Error: Audio recording is not supported"</string>
    <string name="error_no_permission">"Error: Permission for RECORD_AUDIO was denied"</string>

    <string name="prompt_permission">"This sample needs RECORD_AUDIO permission"</string>
</resources>
