<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ece420.lab2.MainActivity">

    <Button
        android:id="@+id/capture_control_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEchoClick"
        android:text="@string/StartEcho"
        android:layout_centerInParent="true"
        android:translationX="0dp"
        android:translationY="-80dp" />

    <Button
        android:id="@+id/lms_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEchoClick2"
        android:text="@string/engine_echo"
        android:layout_centerInParent="true"
        android:translationX="0dp"
        android:translationY="-200dp" />

    <Button
        android:id="@+id/get_parameter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/statusView"
        android:layout_alignParentStart="true"
        android:onClick="getLowLatencyParameters"
        android:text="@string/GetParam" />

    <TextView
        android:id="@+id/statusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:lines="3"
        android:text="@string/init_status" />

    <Button
        android:id="@+id/crowd_noise"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEchoClick1"
        android:layout_centerInParent="true"
        android:text="@string/crowd_echo"
        android:translationX="0dp"
        android:translationY="60dp" />

    <Button
        android:id="@+id/helicopter_noise"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEchoClick3"
        android:layout_centerInParent="true"
        android:text="@string/helicopter_echo"
        android:translationX="0dp"
        android:translationY="160dp" />

</RelativeLayout>
